ingress/nba-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nba
  annotations:
    kubernets.io/ingress.class: nginx
  name: foo-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 10.254.159.249.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
